--- a/index.html
+++ b/index.html
@@ -114,11 +114,13 @@
             <li>2nd</li>
             <li>3rd</li>
         </ul>
-        <input type="text" placeholder="new title" id="newTitle">
+        <button type="submit" placeholder="add item" style="border-radius: 50%" onclick="addToTheSecond()">+</button>
+        <input type="text" placeholder="new title" id="newTitle" />
+        <button onclick="changeListTitle()">Change</button>
         <div>
             <p>This text is just for the exercise</p>
         </div>
-        <button onclick="changeListTitle()">Change</button>
+        
         <button  onclick="changePContent()">Click to change p</button>
        </section>
      <!--<p>HELLO I'M NOT CHANGING BECAUSE I'M NOT A CHILD OF A DIV</p>-->
