--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <table id="products">
     <h2 class="productTitle">Best products</h2>
     <tr>
-        <td>  <div class="card">
-            <img class="card-img-top tableImage" onclick="toggleShowImages()" src="https://images.pexels.com/photos/1152077/pexels-photo-1152077.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Card image cap">
+        <td onmouseover="makeThemMagnifiable()">  <div class="card">
+            <img class="card-img-top tableImage"  src="https://images.pexels.com/photos/1152077/pexels-photo-1152077.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Brown bag</h5>
               <p class="card-text">casualbag, medium size. Great for students</p>
@@ -51,9 +51,9 @@
               <a href="https://www.amazon.it/TcIFE-Borse-Donna-Tracolla-Borsetta/dp/B07QRHBFD7/ref=redir_mobile_desktop?ie=UTF8&aaxitk=SFIhLc5J59UfHkBmZRJAdQ&hsa_cr_id=1234990480902&ref_=sbx_be_s_sparkle_tsld_asin_0" class="btn btn-primary amazon" target="_blank">Details</a>
             </div>
           </div></td>
-        <td>     
+        <td >     
             <div class="card">
-            <img class="card-img-top tableImage" onclick="toggleShowImages()" src="https://images.unsplash.com/photo-1528575950036-63c4853d3f6f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
+            <img class="card-img-top tableImage"  src="https://images.unsplash.com/photo-1528575950036-63c4853d3f6f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Elegant bag</h5>
               <p class="card-text">A really elegant bag for special events</p>
@@ -62,7 +62,7 @@
             </div>
           </div></td>
         <td>   <div class="card">
-            <img class="card-img-top tableImage " onclick="toggleShowImages()" src="https://images.unsplash.com/photo-1528976915572-6a0cf746802e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
+            <img class="card-img-top tableImage "  src="https://images.unsplash.com/photo-1528976915572-6a0cf746802e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Backpack</h5>
               <p class="card-text">Backpack perfect for the back to school</p>
@@ -72,7 +72,7 @@
             </div>
           </div></td>
         <td>  <div class="card">
-            <img class="card-img-top tableImage" onclick="toggleShowImages()" src="https://images.pexels.com/photos/1152077/pexels-photo-1152077.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Card image cap">
+            <img class="card-img-top tableImage"  src="https://images.pexels.com/photos/1152077/pexels-photo-1152077.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Brown bag</h5>
               <p class="card-text">casualbag, medium size. Great for students</p>
@@ -81,7 +81,7 @@
             </div>
           </div></td>
         <td>    <div class="card">
-            <img class="card-img-top tableImage"  onclick="toggleShowImages()" src="https://images.unsplash.com/photo-1479219136056-56bb6495a005?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
+            <img class="card-img-top tableImage"   src="https://images.unsplash.com/photo-1479219136056-56bb6495a005?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Clutch</h5>
               <p class="card-text">Very unusual model of bag, little vintage</p>
@@ -90,7 +90,7 @@
 
             </div>
           </div></td>
-        
+        <button onclick="toggleShowImages()">Click</button>
     </tr>
    
 </table>
